force-app/main/default/objects/Product2/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>