force-app/main/default/objects/Product2/fields/Parent_Property__c.field-meta.xml
<CustomField>
    <fullName>Parent_Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Property</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>ChildProperties</relationshipName>
    <type>Lookup</type>
</CustomField>