force-app/main/default/objects/Product2/fields/Property_Status__c.field-meta.xml
<CustomField>
    <fullName>Property_Status__c</fullName>
    <label>Property Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Rented</fullName>
            </value>
            <value>
                <fullName>Under Maintenance</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>