force-app/main/default/objects/Product2/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Building</fullName>
            </value>
            <value>
                <fullName>Room</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Land</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>