force-app/main/default/objects/Product2/fields/Rent_Rate__c.field-meta.xml
<CustomField>
    <fullName>Rent_Rate__c</fullName>
    <label>Rent Rate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>