force-app/main/default/objects/Product2/fields/Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>Square_Footage__c</fullName>
    <label>Square Footage</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>