force-app/main/default/objects/Product2/recordTypes/E_Commerce.recordType-meta.xml
<RecordType>
    <fullName>E_Commerce</fullName>
    <active>true</active>
    <description>E Commerce</description>
    <label>E Commerce</label>
</RecordType>