force-app/main/default/objects/Product2/recordTypes/Equipment.recordType-meta.xml
<RecordType>
    <fullName>Equipment</fullName>
    <active>true</active>
    <description>Equipment, Machines and other Movable Properties</description>
    <label>Equipment</label>
</RecordType>