force-app/main/default/objects/Product2/recordTypes/Property.recordType-meta.xml
<RecordType>
    <fullName>Property</fullName>
    <active>true</active>
    <description>Real Estate Property</description>
    <label>Property</label>
</RecordType>